# SyntaxAnalysis

./: CMakeLists.txt  README.md
src/: Lexer.cpp  Lexer.h  Makefile  Token.h  main.cpp  parser  parser.cpp  parser.h
tests/: output0.txt  output1.txt  output2.txt  output3.txt  test0.rat25f  test1.rat25f  test2.rat25f  test3.rat25f
